with js and problem solving

--- a/WEEK1/HTML/introduction.html
+++ b/WEEK1/HTML/introduction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week 1</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
   </head>
   <body>
     <div class="a">
@@ -45,7 +45,7 @@
       </div>
       <div class="c2">
         <img
-          src="../dcc.jpeg"
+          src="../IMAGES/dcc.jpeg"
           alt="Dhaka city college"
           width="500"
           height="350"
@@ -112,7 +112,7 @@
     <a href="chapter4.html#C4">Jump to Chapter 4</a>
     <hr />
     <h1>Image Map:</h1>
-    <img src="../workplace.jpg" alt="Workplace" usemap="#workmap" />
+    <img src="../IMAGES/workplace.jpg" alt="Workplace" usemap="#workmap" />
     <map name="workmap">
       <area
         shape="rect"
