--- a/WEEK2/HTML/semantic.html
+++ b/WEEK2/HTML/semantic.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML LAYOUT</title>
     <link rel="stylesheet" href="../CSS/semantic.css" />
-    <style>
-    
-    </style>
+    <style></style>
   </head>
   <body>
     <header>
@@ -15,7 +13,9 @@
     </header>
     <nav>
       <ul>
-        <li><a  href="#">home</a></li>
+        <li>
+          <a href="#">home</a>
+        </li>
         <li><a href="#">about</a></li>
         <li><a href="#">login</a></li>
         <li><a href="#">register</a></li>
@@ -24,7 +24,7 @@
       </ul>
     </nav>
     <section>
-      <aside class="side-1" >
+      <aside class="side-1">
         <h1 style="font-weight: 900">Topics:</h1>
         <li><a href="">html</a></li>
         <li><a href="">css</a></li>
