--- a/WEEK2/HTML/week2.html
+++ b/WEEK2/HTML/week2.html
@@ -220,6 +220,74 @@
 <div class="div3">div3</div>
 <div class="div4">div4</div>
 
+<!-- IMAGE GALLERY -->
+<h1 class="header">IMAGE GALLERY</h1>
+<div class="gallery">
+  <img src="../IMAGES/c1.avif" alt="" width="600" height="400">
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c2.avif" alt="" width="600" height="400">
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c1.avif" alt="" width="600" >
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c1.avif" alt="" width="600" height="400">
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c2.avif" alt="" width="600" height="400">
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c1.avif" alt="" width="600" >
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c1.avif" alt="" width="600" height="400">
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c1.avif" alt="" width="600" height="400">
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c2.avif" alt="" width="600" height="400">
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c1.avif" alt="" width="600" >
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c1.avif" alt="" width="600" height="400">
+</div>
+<div class="gallery">
+  <img src="../IMAGES/c2.avif" alt="" width="600" height="400">
+</div>
+<!-- CSS FORM -->
+    <h1 class="header">HTML FORM</h1>
+<div class="form-div">
+  <form action="">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your name">
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Your email" required>
+    
+    <label for="password">password</label>
+    <input type="password" id="password" name="password" placeholder="Your password" required>
+    <textarea placeholder="Some text..."></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
+</div>
+<!-- SELECT OPTIONS with search bar -->
+<h1 class="header">OPTION PICKER WITH SEARCH BAR</h1>
+<input class="search-bar" type="search" name="search" placeholder="Search your country"><br>
+<label for="country">Country</label><br/>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
+<!--  -->
 <!-- HTML INTITIES -->
     <h1 class="header">HTML INTITIES</h1>
     <div>
